<resources>
    <string name="app_name">UTSApplicationSederhanaa</string>
    <string name="komponen_android">Komponen Android</string>
    <string name="intent">Intent</string>
    <string name="activity">Activity</string>
    <string name="service">Service</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="content_">Content Provider</string>
    <string name="materi">Intent adalah sebuah kelas dalam programming Android yang berfungsi untuk perpindahan halaman.  Intent juga merupakan suatu objek yang terdapat dalam suatu activity dimana objek tersebut dapat komunikasi dengan activity yang lain, baik activity pada fungsi internal android misal seperti memanggil activity dalam satu package atau beda package yang masih berada dalam satu project.</string>
    <string name="materi_intent">Materi Intent</string>
    <string name="link_intent">Link Intent</string>
    <string name="https_www_codepolitan_com_belajar_menggunakan_intent_sebuah_jembatan_interaksi_antar_komponen_599a5576271ef">https://www.codepolitan.com/belajar-menggunakan-intent-sebuah-jembatan-interaksi-antar-komponen-599a5576271ef</string>
    <string name="contoh_syntax">Contoh Syntax</string>
    <string name="materi_act">materi_act</string>
    <string name="link_act">link_act</string>
    <string name="https_developer_android_com_guide_components_activities_hl_id">/https://developer.android.com/guide/components/activities/?hl=id</string>
    <string name="materi_activity">Materi Activity</string>
    <string name="materi_activ">Activity adalah sebuah komponen aplikasi yang menyediakan layar yang digunakan pengguna untuk berinteraksi guna melakukan sesuatu, misalnya memilih nomor ponsel, mengambil foto, mengirim email, atau menampilkan peta. Tiap aktivitas diberi sebuah jendela untuk menggambar antarmuka penggunanya. Jendela ini biasanya mengisi layar, namun mungkin lebih kecil daripada layar dan mengambang di atas jendela lain.</string>
    <string name="link_activity">Link Activity</string>
    <string name="materi_service">Service adalah sebuah komponen aplikasi yang bisa melakukan operasi yang berjalan lama di latar belakang dan tidak menyediakan antarmuka pengguna. Komponen aplikasi lain bisa memulai layanan dan komponen aplikasi tersebut akan terus berjalan di latar belakang walaupun pengguna beralih ke aplikasi lain. Selain itu, komponen bisa mengikat ke layanan untuk berinteraksi dengannya dan bahkan melakukan komunikasi antarproses (IPC). Misalnya, layanan mungkin menangani transaksi jaringan, memutar musik, melakukan file I/O, atau berinteraksi dengan penyedia materi dari latar belakang.</string>
    <string name="materi_serv">Materi Service</string>
    <string name="link_serv">link_service</string>
    <string name="link_service">Link Service</string>
    <string name="link_servi">https://developer.android.com/guide/components/services?hl=id</string>
    <string name="https_developer_android_com_guide_components_services_hl_id">https://developer.android.com/guide/components/services?hl=id</string>
    <string name="materi_broadcast_receiver">Penerima siaran adalah komponen yang memungkinkan sistem menyampaikan kejadian di luar alur pengguna regular, menjadikan aplikasi tersebut dapat merespons pengumuman siaran seluruh sistem. Oleh karena penerima siaran adalah entri yang didefinisikan dengan baik ke dalam aplikasi, sistem dapat mengirimkan siaran meskipun ke aplikasi yang saat ini tidak berjalan. </string>
    <string name="broadcast_serv">Broadcast Service</string>
    <string name="broadcast_receiv">Broadcast Receiver</string>
    <string name="https_developer_android_com_guide_components_fundamentals_hl_id">https://developer.android.com/guide/components/fundamentals?hl=id</string>
    <string name="konten_provider">ContentProvider adalah penyedia konten dari satu aplikasi ke aplikasi lain atas perintah tertentu. Perintah tersebut ditangani oleh sebuah method dari class ContentResolver. Data dapat disimpan dalam sistem file, database atau di tempat lainnya.ContentProvider diimplementasikan sebagai subclass dari class ContentProvider dan harus menerapkan satu set standar API yang memungkinkan aplikasi lain untuk melakukan transaksi.</string>
    <string name="contentprovider">Content Provider</string>
    <string name="link_content_provider">Link Content Provider</string>
    <string name="link_broadcast_receive">Link Broadcast Receive</string>
    <string name="content_provider">Content Provider</string>
    <string name="http_android_beginner_lessons_blogspot_com_2015_10_android_mengenal_komponen_aplikasi_html">http://android-beginner-lessons.blogspot.com/2015/10/android-mengenal-komponen-aplikasi.html</string>
    <string name="intent_filter_android_icon_drawable_resource_android_label_string_resource_android_priority_integer_intent_filter"><![CDATA[<intent-filter android:icon=drawable resource android:label=string resource android:priority=integer > . . . </intent-filter>]]></string>
    <string name="contoh_syntax_intent">Contoh Syntax Intent</string>
    <string name="contoh_syntax_activity">Contoh Syntax Activity</string>
    <string name="activity_android_allowembedded_true_false_android_allowtaskreparenting_true_false_android_alwaysretaintaskstate_true_false_android_autoremovefromrecents_true_false_android_banner_drawable_resource_android_cleartaskonlaunch_true_false_android_colormode_hdr_widecolorgamut_android_configchanges_mcc_mnc_locale_touchscreen_keyboard_keyboardhidden_navigation_screenlayout_fontscale_uimode_orientation_density_screensize_smallestscreensize_android_directbootaware_true_false_android_documentlaunchmode_intoexisting_always_none_never_android_enabled_true_false_android_excludefromrecents_true_false_android_exported_true_false_android_finishontasklaunch_true_false_android_hardwareaccelerated_true_false_android_icon_drawable_resource_android_immersive_true_false_android_label_string_resource_android_launchmode_standard_singletop_singletask_singleinstance_android_locktaskmode_normal_never_if_whitelisted_always_android_maxrecents_integer_android_maxaspectratio_float_android_multiprocess_true_false_android_name_string_android_nohistory_true_false_android_parentactivityname_string_android_persistablemode_persistrootonly_persistacrossreboots_persistnever_android_permission_string_android_process_string_android_relinquishtaskidentity_true_false_android_resizeableactivity_true_false_android_screenorientation_unspecified_behind_landscape_portrait_reverselandscape_reverseportrait_sensorlandscape_sensorportrait_userlandscape_userportrait_sensor_fullsensor_nosensor_user_fulluser_locked_android_showforallusers_true_false_android_statenotneeded_true_false_android_supportspictureinpicture_true_false_android_taskaffinity_string_android_theme_resource_or_theme_android_uioptions_none_splitactionbarwhennarrow_android_windowsoftinputmode_stateunspecified_stateunchanged_statehidden_statealwayshidden_statevisible_statealwaysvisible_adjustunspecified_adjustresize_adjustpan_activity"><![CDATA[<activity android:allowEmbedded=[true | false] android:allowTaskReparenting=[true | false] android:alwaysRetainTaskState=[true | false] android:autoRemoveFromRecents=[true | false] android:banner=drawable resource android:clearTaskOnLaunch=[true | false] android:colorMode=[ hdr| wideColorGamut] android:configChanges=[mcc, mnc, locale, touchscreen, keyboard, keyboardHidden, navigation, screenLayout, fontScale, uiMode, orientation, density, screenSize, smallestScreenSize] android:directBootAware=[true | false] android:documentLaunchMode=[intoExisting | always| none| never] android:enabled=[true | false] android:excludeFromRecents=[true | false] android:exported=[true | false] android:finishOnTaskLaunch=[true | false] android:hardwareAccelerated=[true | false] android:icon=drawable resource android:immersive=[true | false] android:label=string resource android:launchMode=[standard | singleTop| singleTask| singleInstance] android:lockTaskMode=[normal | never| if_whitelisted| always] android:maxRecents=integer android:maxAspectRatio=float android:multiprocess=[true | false] android:name=string android:noHistory=[true | false] android:parentActivityName=string android:persistableMode=[persistRootOnly | persistAcrossReboots| persistNever] android:permission=string android:process=string android:relinquishTaskIdentity=[true | false] android:resizeableActivity=[true | false] android:screenOrientation=[unspecified | behind| landscape| portrait| reverseLandscape| reversePortrait| sensorLandscape| sensorPortrait| userLandscape| userPortrait| sensor| fullSensor| nosensor| user| fullUser| locked] android:showForAllUsers=[true | false] android:stateNotNeeded=[true | false] android:supportsPictureInPicture=[true | false] android:taskAffinity=string android:theme=resource or theme android:uiOptions=[none | splitActionBarWhenNarrow] android:windowSoftInputMode=[stateUnspecified, stateUnchanged, stateHidden, stateAlwaysHidden, stateVisible, stateAlwaysVisible, adjustUnspecified, adjustResize, adjustPan] > . . . </activity>]]></string>
    <string name="contoh_syntax_service">Contoh Syntax Service</string>
    <string name="service_android_description_string_resource_android_directbootaware_true_false_android_enabled_true_false_android_exported_true_false_android_foregroundservicetype_connecteddevice_datasync_location_mediaplayback_mediaprojection_phonecall_android_icon_drawable_resource_android_isolatedprocess_true_false_android_label_string_resource_android_name_string_android_permission_string_android_process_string_service"><![CDATA[<service android:description=string resource android:directBootAware=[true | false] android:enabled=[true | false] android:exported=[true | false] android:foregroundServiceType=[connectedDevice | dataSync| location| mediaPlayback| mediaProjection| phoneCall] android:icon=drawable resource android:isolatedProcess=[true | false] android:label=string resource android:name=string android:permission=string android:process=string > . . . </service>]]></string>
    <string name="provider_android_authorities_list_android_directbootaware_true_false_android_enabled_true_false_android_exported_true_false_android_granturipermissions_true_false_android_icon_drawable_resource_android_initorder_integer_android_label_string_resource_android_multiprocess_true_false_android_name_string_android_permission_string_android_process_string_android_readpermission_string_android_syncable_true_false_android_writepermission_string_provider"><![CDATA[<provider android:authorities=list android:directBootAware=[true | false] android:enabled=[true | false] android:exported=[true | false] android:grantUriPermissions=[true | false] android:icon=drawable resource android:initOrder=integer android:label=string resource android:multiprocess=[true | false] android:name=string android:permission=string android:process=string android:readPermission=string android:syncable=[true | false] android:writePermission=string > . . . </provider>]]></string>
    <string name="receiver_android_directbootaware_true_false_android_enabled_true_false_android_exported_true_false_android_icon_drawable_resource_android_label_string_resource_android_name_string_android_permission_string_android_process_string_receiver"><![CDATA[<receiver android:directBootAware=[true | false] android:enabled=[true | false] android:exported=[true | false] android:icon=drawable resource android:label=string resource android:name=string android:permission=string android:process=string > . . . </receiver>]]></string>
    <string name="kembali">Kembali</string>
    <string name="link">https://developer.android.com/guide/components/intents-common?hl=id</string>
    <string name="link3">Link</string>
    <string name="link4">Link</string>
    <string name="link5">Link</string>
    <string name="link2">Link</string>
    <string name="link1">Link</string>
</resources>
